# Reversi-DearPyGUI-ChatGPT

./: LICENSE.txt  README.md  pyproject.toml  reversi.py
